--- a/pom.xml
+++ b/pom.xml
@@ -45,35 +45,28 @@
         <!--        <version>42.2.18.jre7</version>-->
         <!--    </dependency>-->
     </dependencies>
+    <packaging>jar</packaging>
     <build>
+        <finalName>wiki-data-visual</finalName>
         <pluginManagement>
             <plugins>
                 <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-assembly-plugin</artifactId>
-                    <executions>
-                        <execution>
-                            <phase>package</phase>
-                            <goals>
-                                <goal>single</goal>
-                            </goals>
-                            <configuration>
-                                <archive>
-                                    <manifest>
-                                        <mainClass>
-                                            org.example.wiki_media_data_visuals.WikiMediaDataVisualsApplication
-                                        </mainClass>
-                                    </manifest>
-                                </archive>
-                                <descriptorRefs>
-                                    <descriptorRef>jar-with-dependencies</descriptorRef>
-                                </descriptorRefs>
-                            </configuration>
-                        </execution>
-                    </executions>
+                    <groupId>com.heroku.sdk</groupId>
+                    <artifactId>heroku-maven-plugin</artifactId>
+                    <version>2.0.3</version>
+                    <configuration>
+                        <appName>wiki-data-visual</appName>
+                        <includeTarget>false</includeTarget>
+                        <includes>
+                            <include>${project.build.directory}/${project.build.finalName}.jar</include>
+                        </includes>
+                        <jdkVersion>${java.version}</jdkVersion>
+                        <processTypes>
+                            <web>java $JAVA_OPTS -jar ${project.build.directory}/${project.build.finalName}.jar</web>
+                        </processTypes>
+                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
     </build>
-
 </project>
