context path fix

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 server.port=9594
 
 #spring.datasource.url=jdbc:postgresql://localhost:5432/wikiapi
-#spring.datasource.username=codewizard
+#spring.datasource.username=
 #spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.mvc.static-path-pattern=/app/**
+spring.mvc.static-path-pattern=/**
 
 wiki.api.req1=https://ru.wikipedia.org/w/api.php?action=query&prop=info|pageviews|pageimages&format=json&inprop=url&pithumbsize=200&titles=
 wiki.api.req2=https://ru.wikipedia.org/w/api.php?action=query&generator=mostviewed&prop=info|pageviews|pageimages&format=json&gpvimlimit=20&inprop=url&piprop=thumbnail&pithumbsize=300
