--- a/pom.xml
+++ b/pom.xml
@@ -14,13 +14,9 @@
     <name>wiki_media_data_visuals</name>
     <description>Demo project for Spring Boot</description>
     <properties>
-        <java.version>8</java.version>
+        <java.version>1.8</java.version>
     </properties>
     <dependencies>
-        <!--        <dependency>-->
-        <!--            <groupId>org.springframework.boot</groupId>-->
-        <!--            <artifactId>spring-boot-starter-data-jpa</artifactId>-->
-        <!--        </dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
@@ -34,39 +30,38 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-        <!--        <dependency>-->
-        <!--            <groupId>org.springframework.boot</groupId>-->
-        <!--            <artifactId>spring-boot-devtools</artifactId>-->
-        <!--            <optional>true</optional>-->
-        <!--        </dependency>-->
-        <!--    <dependency>-->
-        <!--        <groupId>org.postgresql</groupId>-->
-        <!--        <artifactId>postgresql</artifactId>-->
-        <!--        <version>42.2.18.jre7</version>-->
-        <!--    </dependency>-->
     </dependencies>
     <packaging>jar</packaging>
     <build>
         <finalName>wiki-data-visual</finalName>
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>com.heroku.sdk</groupId>
-                    <artifactId>heroku-maven-plugin</artifactId>
-                    <version>2.0.3</version>
-                    <configuration>
-                        <appName>wiki-data-visual</appName>
-                        <includeTarget>false</includeTarget>
-                        <includes>
-                            <include>${project.build.directory}/${project.build.finalName}.jar</include>
-                        </includes>
-                        <jdkVersion>${java.version}</jdkVersion>
-                        <processTypes>
-                            <web>java $JAVA_OPTS -jar ${project.build.directory}/${project.build.finalName}.jar</web>
-                        </processTypes>
-                    </configuration>
-                </plugin>
-            </plugins>
-        </pluginManagement>
+        <plugins>
+            <!-- Set a compiler level -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                        <configuration>
+                            <classifier>spring-boot</classifier>
+                            <mainClass>
+                                org.example.wiki_media_data_visuals.WikiMediaDataVisualsApplication
+                            </mainClass>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
     </build>
 </project>
