--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
     <build>
         <finalName>wiki-data-visual</finalName>
         <plugins>
+            <plugin>
+                <groupId>com.heroku.sdk</groupId>
+                <artifactId>heroku-maven-plugin</artifactId>
+                <version>3.0.3</version>
+            </plugin>
             <!-- Set a compiler level -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
