--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=80
 spring.mvc.static-path-pattern=/**
 
-#wiki endpoints
+#wiki endpoints omg
 wiki.api.req1=https://ru.wikipedia.org/w/api.php?action=query&prop=info|pageviews|pageimages&format=json&inprop=url&pithumbsize=200&titles=
 wiki.api.req2=https://ru.wikipedia.org/w/api.php?action=query&generator=mostviewed&prop=info|pageviews|pageimages&format=json&gpvimlimit=20&inprop=url&piprop=thumbnail&pithumbsize=300
 wiki.api.req3=https://ru.wikipedia.org/w/api.php?action=query&generator=categorymembers&prop=info|pageviews|pageimages&inprop=url&piprop=thumbnail&pithumbsize=300&format=json&gcmlimit=500&gcmtitle=Category:
